<resources>
    <string name="app_name">Movies</string>
    <string name="sort_popular">popular</string>
    <string name="sort_toprated">top_rated</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_popular_selected">&gt; Popular &lt;</string>
    <string name="menu_top_rated">Top rated</string>
    <string name="menu_liked">Liked</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_top_rated_selected">&gt; Top rated &lt;</string>
    <string name="movie_picture_content_description">Movie picture</string>
    <string name="popularity_description_label">Popularity: %1d</string>
    <string name="reviews_lbl">Reviews: </string>
    <string name="error_message">Error </string>
    <string name="search">Search</string>
    <string name="search1">Search: String before title</string>
    <string name="search2">Search: String after title</string>
    <string name="google1">https://www.google.ru/search?q=</string>
    <string name="google2"/>
    <string name="share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No data, network connection required or empty database</string>
    <string name="en">en</string>
    <string name="ru">ru</string>
    <string name="language">Language</string>
    <string name="languageSum">Description language (en, ru, es, it, de, &#8230;)\n Reload app  to see changes</string>
</resources>
