<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amargodigits.movies.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />
    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/image_iv"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_picture_content_description"
                    android:scaleType="fitXY" />
                <include layout="@layout/detail_infoblock" />
            </LinearLayout>
            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:id="@+id/search_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:text="@string/search"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:id="@+id/share_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableStart="@android:drawable/ic_menu_share"
                    android:text="@string/share"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
            <TextView
                android:id="@+id/videosTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
            <TextView
                android:id="@+id/reviewsTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.AppBarLayout>
</LinearLayout>